--- a/LaPollutionNumeriqueUnVraiProbleme.html
+++ b/LaPollutionNumeriqueUnVraiProbleme.html
@@ -80,5 +80,29 @@ Les usages du web sont a l’origine d’une grande part de la pollution mondial
 <div class="exergue">
 «4 fois plus que la Suisse et 8 fois plus que l’Espagne !»</div>
 
+<p>
+    Avec l’arrivée de réseaux sociaux comme Snapchat ou Instagram, dont le but est de partager des photos, la consommation des datas center a fortement augmenté. En effet, une photo étant beaucoup plus lourde qu’un texte à envoyer, cela demande donc plus d’énergie aux datas center.
+    Un photo demanderai 19 Watts pour permettre son envoi, c’est comme si
+    <strong>on allumait une ampoule pendant plus de 5 jours d’affilé !</strong>
+    Les datas center américains ont consommés 91 milliards de kWh en 2013. Sachant que dans de nombreux pays l’électricité est produite grâce à l’énergie charbon (qui est l’énergie la plus polluante) les emissions de Co2 sont donc énormes.
+</p>
+
+<img src="img/FumeeIMG3ART2.JPG" alt="Image pollution">
+
+<div class="legende">
+    Centrale au charbon Américaine
+</div>
+
+<p>
+    Les datas center étant constamment allumés, ils chauffent et il faut donc les refroidir.
+<strong>La climatisation pour refroidir ces derniers représenterait 40 à 50%</strong>
+    de la consommation énergétique des datas centers.
+</p>
+
+<p>
+    Les réseaux sociaux, via le biais des datas centers qu’ils utilisent représentent donc une grande source de pollution que nous ne voyons pas au quotidien lorsque nous envoyons une image à un ami par exemple. Ces usages, bien que problématiques au niveau environnemental ne peuvent cependant pas être supprimés. Il faut donc trouver des alternatives et/ou des solutions pour limiter et diminuer l’impact environnemental et énergétique de ces derniers.
+</p>
+
+
 </body>
 </html>
