article 2 sans icones et footer

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 </div>
 
     <div class="ProjetRéalisé">
-        Projet réalisé dans le cadre d’un exercice pédagogique au département MMI Montbéliard
+        Projet réalisé dans le cadre d’un exercice pédagogique au département <a href="http://mmimontbeliard.com/">MMI Montbéliard</a>
     </div>
 
 <div class="Icones">
