--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
     <nav class="menu">
         <ul>
             <li><a href="index.html">ACCUEIL</a></li>
-            <li><a href="#">ARTICLE 2</a></li>
-            <li><a href="#">accueil</a></li>
-            <li><a href="#">art1</a></li>
-            <li><a href="#">Art2</a></li>
+            <li><a href="LaSurconsommationNumerique.html">LA SURCONSOMMATION NUMERIQUE</a></li>
+            <li><a href="LaPollutionNumeriqueUnVraiProbleme.html">LA POLLUTION NUMÉRIQUE : UN VRAI PROBLÈME</a></li>
+            <li><a href="UtiliserLeWebProprement.html">UTILISER LE WEB PROPREMENT</a></li>
+            <li><a href="Galerie.html">GALERIE PHOTO ET VIDEO</a></li>
+            <li><a href="InfoPratiques.html">INFOS PRATIQUES</a></li>
+            <li><a href="Formulaire.html">FORMULAIRE</a></li>
         </ul>
     </nav>
 </header>
@@ -44,16 +46,7 @@
 
 
 
-<nav class="menu">
-    <ul>
-        <li><a href="#">Lorem</a></li>
-        <li><a href="#">loremZ</a></li>
-        <li><a href="#">accueil</a></li>
-        <li><a href="#">art1</a></li>
-        <li><a href="#">Art2</a></li>
-    </ul>
-</nav>
-</header>
+
 
 <img src="img/Accueil_Logo.png" alt="Accueil Image" >
 
@@ -65,17 +58,27 @@
     <img src="img/Black-Mirror-y-aura-t-il-un-episode-special-coronavirus-Le-createur-repond.jpg" alt="Image Black Mirror">
     <p> Vous vous demandez ce qu’est la pollution numérique, quel est sa cause ? Vous allez découvrir cela avec l’exemple de la série très connue Black Mirror !
     </p>
+    <div class="EnSavoirPlus">
+        <a href="LaSurconsommationNumerique.html">En Savoir Plus ></a>
+    </div>
 
     <img src="img/Data_Center1.jpg" alt="Data Center Article2">
-
     <p>Vous vous posez la question des problèmes de la pollution numériques et quel sont les impacts sur l’environnement de cette dernière ?
     </p>
+    <div class="EnSavoirPlus">
+        <a href="LaPollutionNumeriqueUnVraiProbleme.html">En Savoir Plus ></a>
+    </div>
 
     <img src="img/Planete.jpg" alt="Planète Verte Article 3">
-
     <p>Vous vous demandez alors comment limiter voire réduire cette pollution numérique et comment peut-on naviguer sur le web proprement ?</p>
-
+    <div class="EnSavoirPlus">
+        <a href="UtiliserLeWebProprement.html">En Savoir Plus ></a>
+    </div>
 </main>
+
+<div class="fleche">
+<a href="#top"><img src="img/FlecheMontante.png" alt="Flèche"></a>
+</div>
 
 
 <footer>
@@ -91,7 +94,8 @@
     </div>
 
 <div class="Icones">
-
+    <a href="http://mmimontbeliard.com"><img src="img/mmi_logo.png"></a>
+    <a href="mailto:yanissalmi9@gmail.com"><img src="img/logo_gmail.png" alt="logogmail"></a>
 </div>
 
 </footer>
