--- a/ExtraitScientifique.html
+++ b/ExtraitScientifique.html
@@ -29,10 +29,12 @@
     <nav class="menu">
         <ul>
             <li><a href="index.html">ACCUEIL</a></li>
-            <li><a href="#">ARTICLE 2</a></li>
-            <li><a href="#">accueil</a></li>
-            <li><a href="#">art1</a></li>
-            <li><a href="#">Art2</a></li>
+            <li><a href="LaSurconsommationNumerique.html">LA SURCONSOMMATION NUMERIQUE</a></li>
+            <li><a href="LaPollutionNumeriqueUnVraiProbleme.html">LA POLLUTION NUMÉRIQUE : UN VRAI PROBLÈME</a></li>
+            <li><a href="UtiliserLeWebProprement.html">UTILISER LE WEB PROPREMENT</a></li>
+            <li><a href="Galerie.html">GALERIE PHOTO ET VIDEO</a></li>
+            <li><a href="InfoPratiques.html">INFOS PRATIQUES</a></li>
+            <li><a href="Formulaire.html">FORMULAIRE</a></li>
         </ul>
     </nav>
 </header>
