--- a/Galerie.html
+++ b/Galerie.html
@@ -1,9 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Formulaire - Polluweb</title>
+
+    <link rel="stylesheet" href="css/lib/normalize.css">
+
+    <link rel="stylesheet" href="css/mescss/typography.css">
+
+    <link rel="stylesheet" href="css/mescss/menu.css">
+
+    <link rel="stylesheet" href="css/mescss/layout.css">
 </head>
+<body>
+
+<header>
+
+    <h1> <a href="">Polluweb</a></h1>
+
+
+    <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
+        <div class="nav-toggle-bar"></div>
+    </div>
+
+
+    <nav class="menu">
+        <ul>
+            <li><a href="index.html">ACCUEIL</a></li>
+            <li><a href="#">LA SURCONSOMMATION NUMERIQUE</a></li>
+            <li><a href="#">accueil</a></li>
+            <li><a href="#">art1</a></li>
+            <li><a href="#">Art2</a></li>
+        </ul>
+    </nav>
+</header>
 <body>
 
 </body>
