index html fini

--- a/Galerie.html
+++ b/Galerie.html
@@ -4,7 +4,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Formulaire - Polluweb</title>
+    <title>Galerie - Polluweb</title>
 
     <link rel="stylesheet" href="css/lib/normalize.css">
 
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/mescss/menu.css">
 
     <link rel="stylesheet" href="css/mescss/layout.css">
+
+    <link rel="stylesheet" href="css/mescss/carousel.css">
 </head>
 <body>
 
@@ -27,16 +29,46 @@
 
 
     <nav class="menu">
+        
         <ul>
+            <img src="img/LogoPolluweb.png" alt="">
             <li><a href="index.html">ACCUEIL</a></li>
-            <li><a href="#">LA SURCONSOMMATION NUMERIQUE</a></li>
-            <li><a href="#">accueil</a></li>
-            <li><a href="#">art1</a></li>
-            <li><a href="#">Art2</a></li>
+            <li><a href="LaSurconsommationNumerique.html">LA SURCONSOMMATION NUMERIQUE</a></li>
+            <li><a href="LaPollutionNumeriqueUnVraiProbleme.html">LA POLLUTION NUMÉRIQUE : UN VRAI PROBLÈME</a></li>
+            <li><a href="UtiliserLeWebProprement.html">UTILISER LE WEB PROPREMENT</a></li>
+            <li><a href="Galerie.html">GALERIE PHOTO ET VIDEO</a></li>
+            <li><a href="InfoPratiques.html">INFOS PRATIQUES</a></li>
+            <li><a href="Formulaire.html">FORMULAIRE</a></li>
         </ul>
     </nav>
 </header>
 <body>
+
+<h1>GALERIE</h1>
+
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aspernatur delectus distinctio, eaque et ex harum, iusto mollitia nihil, nobis nostrum pariatur placeat quae quos sint soluta unde vel veritatis.
+</p>
+
+<main>
+    <section class="carousel">
+        <h2>Films</h2>
+        <ul class ="carousel-item">
+            <li class="carousel-item">
+                <img src="img/HowToSellDrugsOnline.jpg"></li>
+            <li class="carousel-item">
+                <img src="img/LaPlateforme.jpg"></li>
+            <li class="carousel-item">
+                <img src="img/Matrix.jpg"></li>
+            <li class="carousel-item">
+                <img src="img/MrRobot.jpg"></li>
+            <li class="carousel-item">
+                <img src="img/ReadyPlayerOne.jpg"></li>
+
+        </ul>
+
+    </section>
+</main>
 
 </body>
 </html>
