--- a/InfoPratiques.html
+++ b/InfoPratiques.html
@@ -27,12 +27,16 @@
 
 
     <nav class="menu">
+
         <ul>
+            <img src="img/LogoPolluweb.png" alt="">
             <li><a href="index.html">ACCUEIL</a></li>
-            <li><a href="#">LA SURCONSOMMATION NUMERIQUE</a></li>
-            <li><a href="#">accueil</a></li>
-            <li><a href="#">art1</a></li>
-            <li><a href="#">Art2</a></li>
+            <li><a href="LaSurconsommationNumerique.html">LA SURCONSOMMATION NUMERIQUE</a></li>
+            <li><a href="LaPollutionNumeriqueUnVraiProbleme.html">LA POLLUTION NUMÉRIQUE : UN VRAI PROBLÈME</a></li>
+            <li><a href="UtiliserLeWebProprement.html">UTILISER LE WEB PROPREMENT</a></li>
+            <li><a href="Galerie.html">GALERIE PHOTO ET VIDEO</a></li>
+            <li><a href="InfoPratiques.html">INFOS PRATIQUES</a></li>
+            <li><a href="Formulaire.html">FORMULAIRE</a></li>
         </ul>
     </nav>
 </header>
