--- a/LaPollutionNumeriqueUnVraiProbleme.html
+++ b/LaPollutionNumeriqueUnVraiProbleme.html
@@ -80,7 +80,13 @@ Les usages du web sont a l’origine d’une grande part de la pollution mondial
 </p>
 
 <div class="exergue">
-«4 fois plus que la Suisse et 8 fois plus que l’Espagne !»</div>
+    <svg xmlns="http://www.w3.org/2000/svg" width="375" height="87" viewBox="0 0 375 87">
+        <g id="exergue1" transform="translate(0 -2841)">
+            <rect id="Rectangle_38" data-name="Rectangle 38" width="375" height="87" transform="translate(0 2841)" fill="#2b5e96"/>
+            <text id="_4_fois_plus_que_la_Suisse_et_8_fois_plus_que_l_Espagne_" data-name="« 4 fois plus que la Suisse et 8 fois plus que l’Espagne ! »" transform="translate(22 2860)" fill="#fff" font-size="20" font-family="HelveticaNeue-Bold, Helvetica Neue" font-weight="700"><tspan x="3.31" y="20">« 4 fois plus que la Suisse et 8 fois </tspan><tspan x="62.55" y="45">plus que l’Espagne ! »</tspan></text>
+        </g>
+    </svg>
+</div>
 
 <p>
     Avec l’arrivée de réseaux sociaux comme Snapchat ou Instagram, dont le but est de partager des photos, la consommation des datas center a fortement augmenté. En effet, une photo étant beaucoup plus lourde qu’un texte à envoyer, cela demande donc plus d’énergie aux datas center.
