--- a/UtiliserLeWebProprement.html
+++ b/UtiliserLeWebProprement.html
@@ -18,12 +18,14 @@
 
 <header>
 
+
     <h1> <a href="">Polluweb</a></h1>
 
 
     <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
         <div class="nav-toggle-bar"></div>
     </div>
+
 
 
     <nav class="menu">
@@ -75,7 +77,13 @@
 </p>
 
 <div class="exergue">
-    « La moyenne passe à 3h14 si on prend les 15-35 ans, qui sont les plus gros utilisateurs. »
+    <svg xmlns="http://www.w3.org/2000/svg" width="375" height="114" viewBox="0 0 375 114">
+        <g id="mise_en_exergue2" data-name="mise en exergue2" transform="translate(0 -2680)">
+            <rect id="Rectangle_39" data-name="Rectangle 39" width="375" height="114" transform="translate(0 2680)" fill="#2b5e96"/>
+            <text id="_La_moyenne_passe_à_3h14_si_on_prend_les_15-35_ans_qui_sont_les_plus_gros_utilisateurs._" data-name="« La moyenne passe à 3h14 si on prend les 15-35 ans, qui sont les plus gros utilisateurs. »" transform="translate(22 2699)" fill="#fff" font-size="20" font-family="HelveticaNeue-Bold, Helvetica Neue" font-weight="700"><tspan x="9.56" y="20">« La moyenne passe à 3h14 si on </tspan><tspan x="12.16" y="45">prend les 15-35 ans, qui sont les </tspan><tspan x="55.9" y="70">plus gros utilisateurs. »</tspan></text>
+        </g>
+    </svg>
+
 </div>
 
 <p>
