--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 <body>
 
 <header>
-
-    <img src="img/LogoPolluwebBlanc.png" alt="LogoPolluwebBlanc">
-    <h1> <a href="index.html">Polluweb</a></h1>
-
+    <div class="logo">
+    <img src="img/LogoPolluwebBlanc.png" alt=""></div>
+    <div class="NomPolluweb">
+    <h1=> <a href="index.html">POLLUWEB
+    </a></h1></div>s
 
     <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
         <div class="nav-toggle-bar"></div>
