--- a/index.html
+++ b/index.html
@@ -17,15 +17,19 @@
 <body>
 
 <header>
+
+
     <div class="logo">
     <img src="img/LogoPolluwebBlanc.png" alt=""></div>
     <div class="NomPolluweb">
-    <h1=> <a href="index.html">POLLUWEB
-    </a></h1></div>s
+    <h1> <a href="index.html">POLLUWEB
+    </a></h1></div>
 
     <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
         <div class="nav-toggle-bar"></div>
     </div>
+
+
 
 
 
@@ -42,13 +46,13 @@
             <li><a href="Formulaire.html">FORMULAIRE</a></li>
         </ul>
     </nav>
-</header>
 
 <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
     <div class="nav-toggle-bar"></div>
 </div>
 
 
+</header>
 
 
 
