--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/mescss/menu.css">
 
     <link rel="stylesheet" href="css/mescss/layout.css">
+
+    <link rel="stylesheet" href="css/mescss/index.css">
 </head>
 <body>
 
@@ -64,7 +66,7 @@
     </p>
 
     <img src="img/Black-Mirror-y-aura-t-il-un-episode-special-coronavirus-Le-createur-repond.jpg" alt="Image Black Mirror">
-    <p> Vous vous demandez ce qu’est la pollution numérique, quel est sa cause ? Vous allez découvrir cela avec l’exemple de la série très connue Black Mirror !
+    <p> Vous vous demandez ce qu’est la pollution numérique, quel est sa cause ?<strong> Vous allez découvrir cela avec l’exemple de la série très connue Black Mirror !</strong>
     </p>
     <div class="EnSavoirPlus">
         <a href="LaSurconsommationNumerique.html"><svg xmlns="http://www.w3.org/2000/svg" width="226" height="63" viewBox="0 0 226 63">
@@ -117,8 +119,10 @@
 <svg></svg>
 
 <div class="Nom">
+    <div class="NomPrenom">
     <p>YANIS</p>
     <p>SALMI</p>
+    </div>
     <p>C1</p>
 </div>
 
