--- a/Galerie.html
+++ b/Galerie.html
@@ -50,6 +50,10 @@
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aspernatur delectus distinctio, eaque et ex harum, iusto mollitia nihil, nobis nostrum pariatur placeat quae quos sint soluta unde vel veritatis.
 </p>
 
+<div class="BandeAnnonce">
+<iframe width="375" height="315" src="https://www.youtube.com/embed/nSDviEdvw4U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 <main>
     <section class="carousel">
         <h2>Films</h2>
