--- a/LaSurconsommationNumerique.html
+++ b/LaSurconsommationNumerique.html
@@ -81,13 +81,24 @@ Extrait de la série
 <p>	Avec cet exemple nous pouvons voir que des personnes sont prêtes a tout pour augmenter leur notoriété virtuelle. Ils passent donc beaucoup de temps sur les réseaux sociaux et engendrent une <strong>pollution numérique</strong>importante pour une utilisation qui est négligeable. Nous allons donc voir que derrières les réseaux sociaux que nous utilisions tous les jours il y a tout un mécanisme qui génère énormément de pollution sans que nous nous rendions compte de cela. Nous allons également voir dans un second temps comment limiter l’impact sur l’environnement de tout cela.
 </p>
 
+<div class="LogoGalerie">
 <a href="Galerie.html"><svg xmlns="http://www.w3.org/2000/svg" width="141" height="27.47" viewBox="0 0 141 27.47">
     <path id="images-solid" d="M31.667,55.546v.981A3.061,3.061,0,0,1,28.5,59.47H3.167A3.061,3.061,0,0,1,0,56.527V40.83a3.061,3.061,0,0,1,3.167-2.943H4.222V50.64A5.108,5.108,0,0,0,9.5,55.546ZM38,50.64v-15.7A3.061,3.061,0,0,0,34.833,32H9.5a3.061,3.061,0,0,0-3.167,2.943v15.7A3.061,3.061,0,0,0,9.5,53.584H34.833A3.061,3.061,0,0,0,38,50.64ZM16.889,37.886a3.061,3.061,0,0,1-3.167,2.943,2.951,2.951,0,1,1,0-5.886A3.061,3.061,0,0,1,16.889,37.886Zm-6.333,8.83,3.662-3.4a.835.835,0,0,1,1.12,0l2.607,2.423,8.94-8.309a.835.835,0,0,1,1.12,0l5.773,5.366v6.867H10.556Z" transform="translate(103 -32)" fill="#06044e"/>
     <text id="Galerie_photo" data-name="Galerie photo" transform="translate(0 5)" fill="#112a62" font-size="16" font-family="HelveticaNeue-Thin, Helvetica Neue" font-weight="200"><tspan x="0" y="15">Galerie photo</tspan></text>
 </svg>
-
+</div>
 </a>
 
+
+<div class="fleche">
+    <a href="#top"><svg xmlns="http://www.w3.org/2000/svg" width="54.772" height="29.291" viewBox="0 0 54.772 29.291">
+        <g id="fleche_qui_monte" data-name="fleche qui monte" transform="translate(-23.672 -4255.672)">
+            <line id="Ligne_4" data-name="Ligne 4" x2="24.558" y2="23.635" transform="translate(51.058 4258.5)" fill="none" stroke="#00184d" stroke-linecap="round" stroke-width="4"/>
+            <line id="Ligne_5" data-name="Ligne 5" y1="23.635" x2="24.558" transform="translate(26.5 4258.5)" fill="none" stroke="#00184d" stroke-linecap="round" stroke-width="4"/>
+        </g>
+    </svg>
+    </a>
+</div>
 
 </body>
 </html>
