--- a/Formulaire.html
+++ b/Formulaire.html
@@ -15,39 +15,68 @@
     <link rel="stylesheet" href="css/mescss/layout.css">
 </head>
 <body>
-
 <header>
 
-    <h1> <a href="">Polluweb</a></h1>
 
+    <div class="logo">
+        <img src="img/LogoPolluwebBlanc.png" alt=""></div>
+    <div class="NomPolluweb">
+        <h1> <a href="index.html">POLLUWEB
+        </a></h1></div>
 
     <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
         <div class="nav-toggle-bar"></div>
     </div>
 
 
+
+
+
     <nav class="menu">
+
         <ul>
+            <img src="img/LogoPolluweb.png" alt="">
             <li><a href="index.html">ACCUEIL</a></li>
-            <li><a href="#">LA SURCONSOMMATION NUMERIQUE</a></li>
-            <li><a href="#">accueil</a></li>
-            <li><a href="#">art1</a></li>
-            <li><a href="#">Art2</a></li>
+            <li><a href="LaSurconsommationNumerique.html">LA SURCONSOMMATION NUMERIQUE</a></li>
+            <li><a href="LaPollutionNumeriqueUnVraiProbleme.html">LA POLLUTION NUMÉRIQUE : UN VRAI PROBLÈME</a></li>
+            <li><a href="UtiliserLeWebProprement.html">UTILISER LE WEB PROPREMENT</a></li>
+            <li><a href="Galerie.html">GALERIE PHOTO ET VIDEO</a></li>
+            <li><a href="InfoPratiques.html">INFOS PRATIQUES</a></li>
+            <li><a href="Formulaire.html">FORMULAIRE</a></li>
         </ul>
     </nav>
+
+    <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
+        <div class="nav-toggle-bar"></div>
+    </div>
+
+
 </header>
 <body>
 
 <h1>FORMULAIRE</h1>
 
-<div class="CaseFormulaire">Votre nom
+<input type="text" id="CaseFormulaire" name="name"
+       placeholder="Votre nom">
+
+<input type="text" id="CaseFormulaire" name="name"
+       placeholder="Votre prénom">
+
+<input type="text" id="CaseFormulaire" name="name"
+       placeholder="Votre adresse mail">
+
+<div class="Commentaire">
+<input type="text" id="CaseFormulaire" name="name"
+       placeholder="Laissez un commentaire">
 </div>
 
-<div class="CaseFormulaire">Votre prénom</div>
+<svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" viewBox="0 0 38 38">
+    <g id="Tracé_25" data-name="Tracé 25" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <path d="M0,0H38V38H0Z" stroke="none"/>
+        <path d="M 2 2 L 2 36 L 36 36 L 36 2 L 2 2 M 0 0 L 38 0 L 38 38 L 0 38 L 0 0 Z" stroke="none" fill="#00184d"/>
+    </g>
+</svg>
 
-<div class="CaseFormulaire">Votre adresse mail</div>
-
-<div class="CaseFormulaire">Laissez un commentaire</div>
 
 
 </body>
