--- a/ExtraitScientifique.html
+++ b/ExtraitScientifique.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/mescss/menu.css">
 
     <link rel="stylesheet" href="css/mescss/layout.css">
+    <link rel="icon" type="image/png" href="img/LogoPolluwebBlanc.png">
+
 </head>
 <body>
 
@@ -87,15 +89,29 @@
 </p>
 
 <img src="img/GAFAM.png" alt="Image GAFAM">
-<div class="legende">GAFAM</div>
+<div class="legende">GAFAM, Les 5 plus grandes firmes américaines du numérique</div>
+
+<div class="DerniereQuestion">
 
 <div class="questions">
     <h3>01net : Demain les GAFAM seront-elles plus forte que les états ?
     </h3>
 </div>
+</div>
 
 <p>Je le crois, regardez Facebook, qui veut instaurer sa propre monnaie. Avec le libra, c’est son nom, Mark Zuckerberg provoque les États dans ce qu’ils ont de plus fondamental dans leurs prérogatives régaliennes? Mais même sans ça, quand on constate la faculté des géants du numérique à échapper a la fiscalité, on s’aperçoit qu’ils fonctionnent deja comme des pays indépendants.</p>
 
+<div class="flecheS">
+<div class="fleche">
+    <a href="#top"><svg xmlns="http://www.w3.org/2000/svg" width="54.772" height="29.291" viewBox="0 0 54.772 29.291">
+        <g id="fleche_qui_monte" data-name="fleche qui monte" transform="translate(-23.672 -4255.672)">
+            <line id="Ligne_4" data-name="Ligne 4" x2="24.558" y2="23.635" transform="translate(51.058 4258.5)" fill="none" stroke="#00184d" stroke-linecap="round" stroke-width="4"/>
+            <line id="Ligne_5" data-name="Ligne 5" y1="23.635" x2="24.558" transform="translate(26.5 4258.5)" fill="none" stroke="#00184d" stroke-linecap="round" stroke-width="4"/>
+        </g>
+    </svg>
+    </a>
+</div>
+</div>
 </body>
 
 <footer>
