--- a/Galerie.html
+++ b/Galerie.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="css/mescss/layout.css">
 
     <link rel="stylesheet" href="css/mescss/carousel.css">
+    <link rel="icon" type="image/png" href="img/LogoPolluwebBlanc.png">
+
 </head>
 <body>
 
@@ -58,11 +60,15 @@
 
 <body>
 
-<h1>GALERIE</h1>
+<div class="fondblanc">
 
-<p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aspernatur delectus distinctio, eaque et ex harum, iusto mollitia nihil, nobis nostrum pariatur placeat quae quos sint soluta unde vel veritatis.
-</p>
+    <h1>GALERIE</h1>
+
+    <p>
+        Si vous aimez la série Black Mirror ou alors si grâce au premier article vous avez envie de découvrir cette série voici un extrait de la première saison juste ci-dessous. Vous pouvez également trouver, en dessous de la bande annonce une liste de films autour du sujet The Dark Side Of The Web.
+    </p>
+
+</div>
 
 <div class="BandeAnnonce">
 <iframe width="375" height="315" src="https://www.youtube.com/embed/nSDviEdvw4U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
