--- a/Interview.html
+++ b/Interview.html
@@ -1,18 +1,21 @@
 <html>
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>La Surconsommation Numérique - Polluweb</title>
+    <title>Interview - Polluweb</title>
+    <link rel="stylesheet" href="css/mescss/interview.css">
 
     <link rel="stylesheet" href="css/lib/normalize.css">
-    <link rel="stylesheet" href="css/mescss/typography.css">
-    <link rel="stylesheet" href="css/mescss/menu.css">
-    <link rel="stylesheet" href="css/mescss/layout.css">
-    <link rel="icon" type="image/png" href="img/LogoPolluwebBlanc.png">
 
+    <link rel="stylesheet" href="css/mescss/typography.css">
+
+    <link rel="stylesheet" href="css/mescss/menu.css">
+
+    <link rel="stylesheet" href="css/mescss/layout.css">
+
+    <link rel="icon" type="image/png" href="img/LogoPolluwebBlanc.png">
 
 </head>
 <body>
@@ -53,76 +56,20 @@
     </div>
 
 
-
 </header>
 
-<img src="img/imagetitreArt1.png" alt="Image titre article 1">
-
-<div class="chapeau">
-Qu’est-ce que la face caché du web, que signifie le terme pollution numérique ? Chaque action sur le web laisse une trace à l’environnement, nous allons voir l’exemple ici avec Black Mirror
-</div>
-
-<p>     L’épisode 1 de la saison 3 de <strong>Black Mirror </strong>se déroule dans un futur assez proche. Dans cet épisode tout le monde possède une note allant de 0 à 5. Selon cette note, les individus se verront attribuer certains droits ou non : plus la note d’une personne est élevée plus elle aura accès a des avantages dans la société (comme par exemple l’accès a certains appartements prisés, le droit de voyager où elle souhaite, etc…). cependant, plus la note des individus est basse, moins la personne aura de droits et de libertés. </p>
-
-<p>Par exemple, si la note d’une personne s’approche trop de zéro elle aura de nombreuses restrictions comme par exemple l’interdiction de voyager où elle le souhaite ou avec le moyen de locomotion de son choix (par exemple une personne mal notée ne peut pas prendre l’avion), ou alors l’interdiction de se loger où elle veut.</p>
-
-<img src="img/ImageArt1-1.jpg" alt="Image 1 Article La Surconsommation Numérique">
-
-<div class="legende">
-Extrait de la série
-</div>
+<h1>INTERVIEW</h1>
 
 <p>
-    Elle va par exemple <strong>passer beaucoup de temps sur les réseaux sociaux</strong>pour complimenter ses amis pour que ces-derniers lui donnent une bonne note. Elle va également passer des heures a fouiller le profil de ses amis sur les réseaux sociaux pour voir ce qu’ils aiment précisément et leur offrir ces objets là pour qu’ils lui donnent  également une bonne note.
-</p>
-
-<p>
-    Sa note ayant augmentée, Lucie va réussir a obtenir son appartement mais durant les jours précédents son déménagement, sa note va baisser à cause de quelques actions négatives qu’elle va faire (comme par exemple renverser du jus sur une personne sans faire exprès).
-</p>
-
-
-<div class="fondblanc">
-<img src="img/ImageArt1-2.jpg" alt="Image 2 article 1">
-<div class="legende">
-Extrait de la série
-</div>
-
-
-<p>  Obnubilée par sa note et l’avis des autres individus sur les <strong>réseaux sociaux</strong> elle va accepter de faire des actions qui ont uniquement pour but d’augmenter sa note. Elle va par exemple accepter l’invitation au mariage d’une amie qu’elle n’apprécie pas trop mais, cette dernière étant bien, notée elle va se sentir obligée de s’y rendre pour augmenter sa note. En effet, si les personnes voient Lucie entourée de personnes bien notés sur les réseaux sociaux ils vont davantage lui faire confiance et lui attribuer une bonne note.
-</p>
-
-<p>Cependant durant la suite de l’épisode les événements négatifs se succèdent pour le personnage principale et Lucie se retrouve avec une note très basse qui lui retire la majorité de ses droits. <strong> Elle va alors tout faire pour remonter sa note. </strong> Elle va par exemple aller au mariage de son amie, mais va enfreindre les lois et sa note va alors baisser de plus en plus. Une fois rentrée par effraction au mariage de son amie, car ne possédant pas la note requise, elle va faire un discours avant d’être arrêtée par la police à cause de toutes les effractions qu’elle a effectué.
-</p>
-</div>
-
-<img src="img/ImageArt1-3.jpeg" alt="Image 3 article 1">
-<div class="legende"> Extrait de la série </div>
-
-
-<p>	Avec cet exemple nous pouvons voir que des personnes sont prêtes a tout pour augmenter leur notoriété virtuelle. Ils passent donc beaucoup de temps sur les réseaux sociaux et engendrent une <strong>pollution numérique</strong>importante pour une utilisation qui est négligeable. Nous allons donc voir que derrières les réseaux sociaux que nous utilisions tous les jours il y a tout un mécanisme qui génère énormément de pollution sans que nous nous rendions compte de cela. Nous allons également voir dans un second temps comment limiter l’impact sur l’environnement de tout cela.
-</p>
-
-<div class="LogoGalerie">
-<a href="Galerie.html"><svg xmlns="http://www.w3.org/2000/svg" width="141" height="27.47" viewBox="0 0 141 27.47">
-    <path id="images-solid" d="M31.667,55.546v.981A3.061,3.061,0,0,1,28.5,59.47H3.167A3.061,3.061,0,0,1,0,56.527V40.83a3.061,3.061,0,0,1,3.167-2.943H4.222V50.64A5.108,5.108,0,0,0,9.5,55.546ZM38,50.64v-15.7A3.061,3.061,0,0,0,34.833,32H9.5a3.061,3.061,0,0,0-3.167,2.943v15.7A3.061,3.061,0,0,0,9.5,53.584H34.833A3.061,3.061,0,0,0,38,50.64ZM16.889,37.886a3.061,3.061,0,0,1-3.167,2.943,2.951,2.951,0,1,1,0-5.886A3.061,3.061,0,0,1,16.889,37.886Zm-6.333,8.83,3.662-3.4a.835.835,0,0,1,1.12,0l2.607,2.423,8.94-8.309a.835.835,0,0,1,1.12,0l5.773,5.366v6.867H10.556Z" transform="translate(103 -32)" fill="#06044e"/>
-    <text id="Galerie_photo" data-name="Galerie photo" transform="translate(0 5)" fill="#112a62" font-size="16" font-family="HelveticaNeue-Thin, Helvetica Neue" font-weight="200"><tspan x="0" y="15">Galerie photo</tspan></text>
-</svg>
-</div>
-</a>
+Dans le cadre de la création du site Polluweb j'ai réalisé un visio-trottoir sur la pollution numérique. Ci-contre, vous trouverez donc une vidéo où plusieurs de mes proches ont été interrogés sur ce sujet. </p>
 
 
 
-<div class="fleche">
-    <a href="#top"><svg xmlns="http://www.w3.org/2000/svg" width="54.772" height="29.291" viewBox="0 0 54.772 29.291">
-        <g id="fleche_qui_monte" data-name="fleche qui monte" transform="translate(-23.672 -4255.672)">
-            <line id="Ligne_4" data-name="Ligne 4" x2="24.558" y2="23.635" transform="translate(51.058 4258.5)" fill="none" stroke="#00184d" stroke-linecap="round" stroke-width="4"/>
-            <line id="Ligne_5" data-name="Ligne 5" y1="23.635" x2="24.558" transform="translate(26.5 4258.5)" fill="none" stroke="#00184d" stroke-linecap="round" stroke-width="4"/>
-        </g>
-    </svg>
-    </a>
-</div>
+<video src="video/MicroTrottoir720mp.mp4" width="375" height="280" controls>
 
-</body>
+</video>
+
+
 
 <footer>
     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="392.527" height="112.51" viewBox="0 0 392.527 112.51">
@@ -154,5 +101,5 @@ C1" transform="translate(16.527 1907.51)" fill="#fff" font-size="12" font-family
     </svg>
 
 </footer>
-
+</body>
 </html>
