--- a/LaPollutionNumeriqueUnVraiProbleme.html
+++ b/LaPollutionNumeriqueUnVraiProbleme.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/mescss/menu.css">
 
     <link rel="stylesheet" href="css/mescss/layout.css">
+    <link rel="icon" type="image/png" href="img/LogoPolluwebBlanc.png">
+
 </head>
 <body>
 
@@ -56,7 +58,7 @@
 
 
 <img src="img/TitreArt2.png" alt="Image titre article 2">
-
+<div class="fondblanc">
 <div class="chapeau">
 Les usages du web sont a l’origine d’une grande part de la pollution mondiale mais savons-nous vraiment a quel point un simple clique peut provoquer un si grande pollution a des centaines voire des milliers de kilomètres de chez nous.
 </div>
@@ -72,7 +74,7 @@ Les usages du web sont a l’origine d’une grande part de la pollution mondial
     <strong> Ce chiffre à augmenté de 12% par rapport a l’an dernier !</strong>
     Avec l’arrivée d’internautes venant de pays emergent, qui n’avaient jusque là pas accès aux réseaux sociaux, ce chiffre tend à fortement s’accroître dans les prochaines années.
 </p>
-
+</div>
 <img src="img/MapMonde.jpg" alt="Map monde">
 <div class="legende">Monde ultra connecté</div>
 
@@ -113,6 +115,7 @@ Les usages du web sont a l’origine d’une grande part de la pollution mondial
 
 <img src="img/FumeeIMG3ART2.JPG" alt="Image pollution">
 
+<div class="fondblanc">
 <div class="legende">
     Centrale au charbon Américaine
 </div>
@@ -150,7 +153,7 @@ Les usages du web sont a l’origine d’une grande part de la pollution mondial
 </div>
 
 </body>
-
+</div>
 <footer>
     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="392.527" height="112.51" viewBox="0 0 392.527 112.51">
         <defs>
