--- a/UtiliserLeWebProprement.html
+++ b/UtiliserLeWebProprement.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/mescss/menu.css">
 
     <link rel="stylesheet" href="css/mescss/layout.css">
+    <link rel="icon" type="image/png" href="img/LogoPolluwebBlanc.png">
+
 </head>
 <body>
 
@@ -59,6 +61,7 @@
 
 <img src="img/TitreArt3.png" alt="Titre article">
 
+<div class="fondblanc">
 <div class="chapeau">
     Nous l’avons vu l’usage du web est très polluant et si nous continuons il va devenir de plus en plus problématique pour la planète. Pour ça, des solutions existe, pour essayer d’avoir un usage plus vert.
 </div>
@@ -72,6 +75,7 @@
 <p>
     Une autre solution pour rendre plus écologique ces datas center, c’est de les placer dans des pays froids. Par exemple de grandes firmes américaines ont pris cette initiative : Google a placé des serveurs en Finlande, grâce à la faible température extérieure ces derniers vont moins dégager de chaleur. Ils utilisent également l’eau de la mer, qui est logiquement très froide, pour les refroidir.
 </p>
+</div>
 
 <img src="img/datacenternorvege.jpg" alt="Data center norvege">
 <div class="legende">Exemple de Data Center norvégien</div>
@@ -83,11 +87,10 @@
 <p>
     Au niveau national, les pays qui utilisent encore des energies fossiles pour fournir l’électricité comme l’Allemagne, la Chine et les États-Unis par exemple (qui, on le rappelle héberge plus d’un tiers des datas centers présents dans le monde) devraient utiliser des énergies moins émettrices de Co2 comme le nucléaire ou encore des énergies renouvelables.
 </p>
-
 <img src="img/BarrageIMG2ART3.jpg" alt="Barrage Article 3">
-<div class="legende">Exemple de barrage hydroélectrique situé en suisse </div>
+<div class="legende">Barrage hydroélectrique situé en Suisse </div>
 
-<p>
+<p class="reculer">
     Au niveau individuel, nous pouvons limiter notre (sur)utilisation des réseaux sociaux. En 2019, les français passaient en moyenne 2h12 par jour sur les réseaux sociaux.
 </p>
 
@@ -100,7 +103,7 @@
     </svg>
 
 </div>
-
+<div class="fondblanc">
 <p>
     À ce jour,
     <strong>14 millions de français sont inscrits sur Instagram, </strong>
@@ -111,7 +114,7 @@
     Faites le test, allez dans la section « Temps d’écran » sur votre smartphone et regardez combien de temps vous passez par jour sur les réseaux sociaux.
     Pour essayer de limiter notre impact nous pouvons donc essayer de diminuer notre temps de consommation sur ces différentes applications. En plus de baisser son impact environnemental, vous allez gagner beaucoup de temps
 </p>
-
+</div>
 <img src="img/ImgNotifications.jpeg" alt="Surconsomation des RS">
 
 <div class="legende">Sur utilisation des réseaux sociaux</div>
@@ -127,7 +130,7 @@
 </p>
 
 <div class="LogoGalerie">
-    <svg xmlns="http://www.w3.org/2000/svg" width="116" height="27" viewBox="0 0 116 27">
+    <a href="Interview.html"><svg xmlns="http://www.w3.org/2000/svg" width="116" height="27" viewBox="0 0 116 27">
         <rect id="Rectangle_43" data-name="Rectangle 43" width="41" height="27" rx="5" transform="translate(75)" fill="#06044e"/>
         <text id="Interview" transform="translate(0 4)" fill="#112a62" font-size="16" font-family="HelveticaNeue-Thin, Helvetica Neue" font-weight="200"><tspan x="0" y="15">Interview</tspan></text>
         <g id="Groupe_3" data-name="Groupe 3" transform="translate(-136 -423)">
@@ -141,7 +144,7 @@
             <line id="Ligne_21" data-name="Ligne 21" y1="4" x2="4" transform="translate(234.5 432.5) rotate(90)" fill="none" stroke="#000" stroke-width="0.2"/>
             <line id="Ligne_19" data-name="Ligne 19" y1="4" x2="4" transform="translate(232.5 432.5)" fill="none" stroke="#000" stroke-width="0.2"/>
         </g>
-    </svg>
+    </svg></a>
 
 </div>
 
