--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="css/mescss/layout.css">
 
     <link rel="stylesheet" href="css/mescss/index.css">
+    <link rel="icon" type="image/png" href="img/LogoPolluwebBlanc.png">
+
 </head>
 <body>
 
