--- a/Galerie.html
+++ b/Galerie.html
@@ -79,15 +79,15 @@
         <h2>Films</h2>
         <ul class ="carousel-item">
             <li class="carousel-item">
-                <img src="img/HowToSellDrugsOnline.jpg"></li>
+                <img src="img/HowToSellDrugsOnline.png"></li>
             <li class="carousel-item">
-                <img src="img/LaPlateforme.jpg"></li>
+                <img src="img/LaPlateforme.png"></li>
             <li class="carousel-item">
-                <img src="img/Matrix.jpg"></li>
+                <img src="img/Matrix.png"></li>
             <li class="carousel-item">
-                <img src="img/MrRobot.jpg"></li>
+                <img src="img/MrRobot.png"></li>
             <li class="carousel-item">
-                <img src="img/ReadyPlayerOne.jpg"></li>
+                <img src="img/ReadyPlayerOne.png"></li>
 
         </ul>
 
@@ -95,6 +95,7 @@
 </main>
 
 </body>
+
 
 <footer>
     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="392.527" height="112.51" viewBox="0 0 392.527 112.51">
@@ -114,7 +115,8 @@
             <g transform="matrix(1, 0, 0, 1, -9, 1876)" filter="url(#Tracé_5)">
                 <path id="Tracé_5-2" data-name="Tracé 5" d="M0,0H374.527V94.51H0Z" transform="translate(9 6)" fill="#27324a"/>
             </g>
-            <text id="Projet_réalisé_dans_le_cadre_d_un_exercice_pédagogique_au_département_MMI_Montbéliard_" data-name="Projet réalisé dans le cadre d’un exercice pédagogique au département MMI Montbéliard " transform="translate(72.527 1918.51)" fill="#fff" font-size="9" font-family="HelveticaNeue, Helvetica Neue"><tspan x="27.814" y="9">Projet réalisé dans le cadre d’un exercice </tspan><tspan x="2.767" y="20">pédagogique au département </tspan><tspan y="20" fill="#aab2ba">MMI Montbéliard </tspan></text>
+            <text id="Projet_réalisé_dans_le_cadre_d_un_exercice_pédagogique_au_département_MMI_Montbéliard_" data-name="Projet réalisé dans le cadre d’un exercice pédagogique au département MMI Montbéliard " transform="translate(72.527 1918.51)" fill="#fff" font-size="9" font-family="HelveticaNeue, Helvetica Neue"><tspan x="27.814" y="9">Projet réalisé dans le cadre d’un exercice </tspan><tspan x="2.767" y="20">pédagogique au département </tspan><tspan y="20" fill="#aab2ba">
+                <a href="http://mmimontbeliard.com">MMI Montbéliard</a> </tspan></text>
             <a href="http://mmimontbeliard.com/"><rect id="mmi_logo" data-name="mmi logo" width="47" height="47" rx="14" transform="translate(265.527 1907.51)" fill="url(#pattern)"/></a>
             <text id="YANIS_SALMI_C1" data-name="YANIS
 SALMI
@@ -124,7 +126,6 @@ C1" transform="translate(16.527 1907.51)" fill="#fff" font-size="12" font-family
         </g>
     </svg>
 
-
-
 </footer>
+
 </html>
