--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
 
 
+
 <img src="img/Accueil_Logo.png" alt="Accueil Image" >
 
 <main>
@@ -136,7 +137,7 @@
                 <path id="Tracé_5-2" data-name="Tracé 5" d="M0,0H374.527V94.51H0Z" transform="translate(9 6)" fill="#27324a"/>
             </g>
             <text id="Projet_réalisé_dans_le_cadre_d_un_exercice_pédagogique_au_département_MMI_Montbéliard_" data-name="Projet réalisé dans le cadre d’un exercice pédagogique au département MMI Montbéliard " transform="translate(72.527 1918.51)" fill="#fff" font-size="9" font-family="HelveticaNeue, Helvetica Neue"><tspan x="27.814" y="9">Projet réalisé dans le cadre d’un exercice </tspan><tspan x="2.767" y="20">pédagogique au département </tspan><tspan y="20" fill="#aab2ba">
-                MMI Montbéliard </tspan></text>
+                <a href="http://mmimontbeliard.com">MMI Montbéliard</a> </tspan></text>
             <a href="http://mmimontbeliard.com/"><rect id="mmi_logo" data-name="mmi logo" width="47" height="47" rx="14" transform="translate(265.527 1907.51)" fill="url(#pattern)"/></a>
             <text id="YANIS_SALMI_C1" data-name="YANIS
 SALMI
@@ -150,3 +151,4 @@ C1" transform="translate(16.527 1907.51)" fill="#fff" font-size="12" font-family
 
 </body>
 </html>
+
