--- a/Formulaire.html
+++ b/Formulaire.html
@@ -85,9 +85,10 @@
     <text id="Je_souhaite_être_tenu_au_courant_des_prochaines_mises_a_jour_du_site." data-name="Je souhaite être tenu au courant des prochaines mises a jour du site." fill="#00184d" font-size="15" font-family="HelveticaNeue-Thin, Helvetica Neue" font-weight="200"><tspan x="0" y="15">Je souhaite être tenu au courant des </tspan><tspan x="0" y="33">prochaines mises a jour du site.</tspan></text>
 </svg>
 
-<p>Envoyer</p>
+<button type="submit">Envoyer</button>
 
 </body>
+
 
 <footer>
     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="392.527" height="112.51" viewBox="0 0 392.527 112.51">
@@ -108,7 +109,7 @@
                 <path id="Tracé_5-2" data-name="Tracé 5" d="M0,0H374.527V94.51H0Z" transform="translate(9 6)" fill="#27324a"/>
             </g>
             <text id="Projet_réalisé_dans_le_cadre_d_un_exercice_pédagogique_au_département_MMI_Montbéliard_" data-name="Projet réalisé dans le cadre d’un exercice pédagogique au département MMI Montbéliard " transform="translate(72.527 1918.51)" fill="#fff" font-size="9" font-family="HelveticaNeue, Helvetica Neue"><tspan x="27.814" y="9">Projet réalisé dans le cadre d’un exercice </tspan><tspan x="2.767" y="20">pédagogique au département </tspan><tspan y="20" fill="#aab2ba">
-                MMI Montbéliard </tspan></text>
+                <a href="http://mmimontbeliard.com">MMI Montbéliard</a> </tspan></text>
             <a href="http://mmimontbeliard.com/"><rect id="mmi_logo" data-name="mmi logo" width="47" height="47" rx="14" transform="translate(265.527 1907.51)" fill="url(#pattern)"/></a>
             <text id="YANIS_SALMI_C1" data-name="YANIS
 SALMI
@@ -119,5 +120,6 @@ C1" transform="translate(16.527 1907.51)" fill="#fff" font-size="12" font-family
     </svg>
 
 </footer>
+
 
 </html>
