--- a/InfoPratiques.html
+++ b/InfoPratiques.html
@@ -91,37 +91,36 @@
 <section class="caroussel">
     <ul class="carousel-item">
         <li class="carousel-item">
-            <img src="img/Logos/LogoMohamed.png" alt="">
+            <a href="http://projets1.mohamedrihi.fr/"><img src="img/Logos/LogoMohamed.png" alt=""></a>
         </li>
         <li class="carousel-item">
-            <img src="img/Logos/LogoTheo.png" alt="">
+            <a href="http://projets1.theoreille.fr/index.html"><img src="img/Logos/LogoTheo.png" alt=""></a>
         </li>
         <li class="carousel-item">
-            <img src="img/Logos/LogoDavidR.png" alt="">
+            <a href="http://projets1.davidriveira.fr"><img src="img/Logos/LogoDavidR.png" alt=""></a>
         <li class="carousel-item">
-            <img src="img/Logos/LogoHugo.png" alt="">
-        </li>s
+        <a href="http://projets1.hugorallu.fr"><img src="img/Logos/LogoHugo.png" alt=""></a>
         </li>
         <li class="carousel-item">
-            <img src="img/Logos/LogoGael.png" alt="">
+            <a href="http://projets1.gaelpardonnet.luciepetit.fr"><img src="img/Logos/LogoGael.png" alt=""></a>
         </li>
         <li class="carousel-item">
-            <img src="img/Logos/LogoLucie.png" alt="">
+            <a href="http://projets1.luciepetit.fr"><img src="img/Logos/LogoLucie.png" alt=""></a>
         <li class="carousel-item">
-            <img src="img/Logos/LogoDavidP.png" alt="">
+        <a href="http://projets1.davidphilippe.fr"><img src="img/Logos/LogoDavidP.png" alt=""></a>
         </li>
         </li>
         <li class="carousel-item">
-            <img src="img/Logos/LogoSimon.png" alt="">
+            <a href="http://projets1.simonquievreux.fr/"><img src="img/Logos/LogoSimon.png" alt=""></a>
         </li>
         <li class="carousel-item">
-            <img src="img/Logos/LogoCharlotte.png" alt="">
-        </li>s
-        <li class="carousel-item">
-            <img src="img/Logos/LogoElora.png" alt="">
+            <a href="http://projets1.charlottepoulain.com/"><img src="img/Logos/LogoCharlotte.png" alt=""></a>
         </li>
         <li class="carousel-item">
-            <img src="img/Logos/LogoMateo.png" alt="">
+            <a href="http://projets1.eloraperrin.fr/"><img src="img/Logos/LogoElora.png" alt=""></a>
+        </li>
+        <li class="carousel-item">
+            <a href="http://projets1.mateorivaud.fr/"><img src="img/Logos/LogoMateo.png" alt=""></a>
         </li>
 
     </ul>
@@ -200,7 +199,7 @@
                 <path id="Tracé_5-2" data-name="Tracé 5" d="M0,0H374.527V94.51H0Z" transform="translate(9 6)" fill="#27324a"/>
             </g>
             <text id="Projet_réalisé_dans_le_cadre_d_un_exercice_pédagogique_au_département_MMI_Montbéliard_" data-name="Projet réalisé dans le cadre d’un exercice pédagogique au département MMI Montbéliard " transform="translate(72.527 1918.51)" fill="#fff" font-size="9" font-family="HelveticaNeue, Helvetica Neue"><tspan x="27.814" y="9">Projet réalisé dans le cadre d’un exercice </tspan><tspan x="2.767" y="20">pédagogique au département </tspan><tspan y="20" fill="#aab2ba">
-                MMI Montbéliard </tspan></text>
+                <a href="http://mmimontbeliard.com">MMI Montbéliard</a> </tspan></text>
             <a href="http://mmimontbeliard.com/"><rect id="mmi_logo" data-name="mmi logo" width="47" height="47" rx="14" transform="translate(265.527 1907.51)" fill="url(#pattern)"/></a>
             <text id="YANIS_SALMI_C1" data-name="YANIS
 SALMI
@@ -211,5 +210,6 @@ C1" transform="translate(16.527 1907.51)" fill="#fff" font-size="12" font-family
     </svg>
 
 </footer>
+
 
 </html>
