--- a/InfoPratiques.html
+++ b/InfoPratiques.html
@@ -1,4 +1,4 @@
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -211,5 +211,5 @@ C1" transform="translate(16.527 1907.51)" fill="#fff" font-size="12" font-family
 
 </footer>
 
-
+</body>
 </html>
